re PR rtl-optimization/15159 (ICE in rtl_verify_flow_info_1)

PR rtl-optimization/15159
	* tree.c (unsafe_for_reeval): Return 2 for TRY_CATCH_EXPRs.

From-SVN: r83426